updated randomness to the simulation and updated tests